Bug 371528 - Cache generation regression
Summary: Cache generation regression
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-10-23 14:52 UTC by animtim
Modified: 2016-10-24 12:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description animtim 2016-10-23 14:52:42 UTC
Cache generation used to work pretty good. Just scrubbing on frames without cache, or even pressing play did generate the cache properly.

Now, if some cache is missing, those actions won't trigger it anymore, and missing cache is only computed sometimes, in quite unpredictable way.
Very annoying..

Side effect is that when playing, if there's some missing cache, it slowly plays on-canvas content (including onion-skins) and show the "render animation" and "updating" notifications constantly.
Very-very annoying..

Reproducible: Always
Comment 1 Dmitry Kazakov 2016-10-24 12:15:05 UTC
Git commit 3c903e48d4d5e8622e3e52e992cd1622ea440f69 by Dmitry Kazakov.
Committed on 24/10/2016 at 12:12.
Pushed by dkazakov into branch 'kazakov/undo-with-instant-preview-T2544'.

Fix animation cache to be updates while playback

This is a hack. But it is the easiest way we can fix it at the moment.
If you see any deadlocks caused by this fix please report a bug.

M  +3    -0    libs/ui/canvas/kis_animation_player.cpp

http://commits.kde.org/krita/3c903e48d4d5e8622e3e52e992cd1622ea440f69