Fix animation cache to be updates while playback

This is a hack. But it is the easiest way we can fix it at the moment.
If you see any deadlocks caused by this fix please report a bug.

BUG:371528